src/test/deca/context/valid/provided/hello-world.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello, world!
//
// Historique:
//    cree le 01/01/2023

{
        println("Hello, world!");
}
