src/test/deca/context/invalid/while-condition-not-boolean.deca
// Description:
//    While but with a condition that is not a boolean 
//
// Resultats:
//    Erreur contextuelle   
//    Ligne 12 : The condition is not a boolean (rule 3.29)
//
// Historique:
//    cree le 12/01/2023

{
    while ("Hello") {
    }
}